--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1><a href="{{ url_for('index')}}">Pack Comp</a></h1>
+            <h1><a href="{{ url_for('main.index')}}">Pack Comp</a></h1>
         </header>
 
         <main>
