--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <h2>旅行作成アプリへようこそ</h2>
-<p><a href="{{ url_for('new_travel') }}">新しい旅行を作成する</a></p>
+<p><a href="{{ url_for('main.travel_form') }}">新しい旅行を作成する</a></p>
 {% endblock %}
