fix: エンドポイント名修正

--- a/app/templates/items_list.html
+++ b/app/templates/items_list.html
@@ -9,5 +9,5 @@
         <li>{{ item.name }} * {{ item.quantity }}</li>
     {% endfor %}
 </ul>
-<a href="{{ url_for('main.new_travel') }}">戻る</a>
+<a href="{{ url_for('main.travel_form') }}">戻る</a>
 {% endblock %}
