--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -1,8 +1,21 @@
 {% extends "base.html" %}
 
-{% block title %}トップページ{% endblock %}
+{% block title %}Pack Compへようこそ!{% endblock %}
 
 {% block content %}
-<h2>旅行作成アプリへようこそ</h2>
-<p><a href="{{ url_for('main.new_travel') }}">新しい旅行を作成する</a></p>
+<h2>旅行準備をもっとスマートに</h2>
+<div class.="illustration">
+    <img src="{{ url_for('static', filename='images/travel_illustration.png') }}">
+</div>
+
+<p class="agreement-text">
+    下記ボタンを選択することで、本サービスの利用規約および<br>
+    プライバシーポリシーに同意したことになります。
+</p>
+
+<div class="button-area">
+    <a href="{{ url_for('auth.login')}}" class="login-btn">新規登録/ログインして使う</a>
+    <a href="{{ url_for('main.new_travel') }}" class="guest-btn">ゲストで試す</a>
+</div>
+
 {% endblock %}
