--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -15,7 +15,7 @@
 
 <div class="button-area">
     <a href="{{ url_for('auth.login')}}" class="login-btn">新規登録/ログインして使う</a>
-    <a href="{{ url_for('main.new_travel') }}" class="guest-btn">ゲストで試す</a>
+    <a href="{{ url_for('main.travels_list') }}" class="guest-btn">ゲストで試す</a>
 </div>
 
 {% endblock %}
