fix: リンク表記に誤りがあったため修正(items_list→items)

--- a/app/templates/travels_list.html
+++ b/app/templates/travels_list.html
@@ -7,13 +7,13 @@
     <div class="travel_card">
         <h3>北海道旅行</h3>
         <p>2025年10月16日〜2025年10月20日</p>
-        <a href="{{ url_for('main.items_list') }}" class="btn">持ち物を見る</a>
+        <a href="{{ url_for('main.items') }}" class="btn">持ち物を見る</a>
     </div>
 
     <div class="travel_card">
         <h3>沖縄旅行</h3>
         <p>2025年11月16日〜2025年11月20日</p>
-        <a href="{{ url_for('main.items_list') }}" class="btn">持ち物を見る</a>
+        <a href="{{ url_for('main.items') }}" class="btn">持ち物を見る</a>
     </div>    
 </div>
 
