add: トップページに画像を追加

--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <h2>旅行準備をもっとスマートに</h2>
-<div class.="illustration">
-    <img src="{{ url_for('static', filename='images/travel_illustration.png') }}">
+<div class="illustration">
+    <img src="{{ url_for('static', filename='images/undraw_traveling_c18z-3.svg') }}">
 </div>
 
 <p class="agreement-text">
