--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,19 +2,24 @@
 
 {% block content %}
 <h2>ログイン</h2>
-<form method="post" action="{{ url_for('auth.login')}}">
-    <label for="email">メールアドレス:</label>
-    <input type="email" id="email" name="email" required>
+<div class="login-container">
+    <form method="post" action="{{ url_for('auth.login')}}">
+        <div class="login-form">
+            <input type="email" placeholder="Email" id="email" name="email" required>
+        </div>
+        
+        <div class="login-form">
+            <input type="password" placeholder="Password" id="password" name="password" required>
+        </div>
+        <div class="button-area">
+            <button type="submit">ログイン</button>
+        </div>
+    </form>
 
-    <label for="password">パスワード:</label>
-    <input type="password" id="password" name="password" required>
+    <p>アカウントをお持ちでない方はこちら</p>
 
-    <button type="submit">ログイン</button>
-</form>
-
-<p>アカウントをお持ちでない方はこちら</p>
-
-<a href="{{ url_for('auth.register') }}">
-    <button type="button">新規登録</button>
-</a>
+    <div class="button-area">
+        <a href="{{ url_for('auth.register') }}">新規登録</a>
+    </div>
+</div>
 {% endblock %}
