--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,6 +21,10 @@ a {
     text-decoration: none;
     color: inherit;
 }
+/* ====== 入力フォーム ====== */
+.login-form {
+    margin-bottom: 15px
+}
 
 /* ====== ボタン共通 ====== */
 .btn, .btn-primary {
@@ -37,15 +41,15 @@ a {
 }
 
 .button-area a, .button-area button{
-    background-color: #65C1EFE8; /* 背景色（青） */
+    background-color: #65C1EFE8;
     display: inline-block;
-    margin: 0 auto 50px;
-    color: white; /* 文字の色 */
-    border: none; /* 枠線を消す */
-    padding: 10px 20px; /* 上下10px・左右20pxの余白 */
-    border-radius: 5px; /* 角を丸くする */
-    font-size: 16px; /* 文字サイズ */
-    cursor: pointer; /* カーソルを「指マーク」にする */
+    margin: 0 auto 30px;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px; 
+    font-size: 16px;
+    cursor: pointer;
 }
 
 .btn {
@@ -67,10 +71,14 @@ a {
 }
 
 /* ====== コンテナ ====== */
-.container {
-    width: 90%;
-    max-width: 800px;
-    margin: 40px auto;
+.login-container {
+    background-color: white;
+    width: 60%;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 /* ====== トップページ用 ====== */
@@ -86,4 +94,16 @@ a {
     color: #666;
     font-size: 0.9rem;
     line-height: 1.5;
+}
+
+/* ====== ユーザー登録/ログイン画面用 ====== */
+.login-form input {
+    margin: 0 auto 20px;
+    width: 100%;
+    height: 45px;
+    padding: 8px 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
