--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -22,7 +22,7 @@ a {
     color: inherit;
 }
 /* ====== 入力フォーム ====== */
-.login-form {
+.login-container form {
     margin-bottom: 15px
 }
 
@@ -41,6 +41,30 @@ a {
     border-radius: 5px; 
     font-size: 16px;
     cursor: pointer;
+}
+
+.tab-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;             /* ボタン間のスペース */
+    margin-bottom: 20px;
+}
+
+.tab-buttons button {
+    flex: 1;               /* 横幅均等 */
+    padding: 10px 0;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    cursor: pointer;
+    transition: background-color 0.2s, color 0.2s;
+}
+
+.tab-buttons button.active {
+    background-color: #38609A; /* アクティブタブの色 */
+    color: white;
+    border-color: #38609A;
 }
 
 /* ====== コンテナ ====== */
@@ -70,7 +94,7 @@ a {
 }
 
 /* ====== ユーザー登録/ログイン画面用 ====== */
-.login-form input {
+.login-container form input {
     margin: 0 auto 20px;
     width: 100%;
     height: 45px;
