--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,18 +21,26 @@ a {
     text-decoration: none;
     color: inherit;
 }
-/* ====== 入力フォーム ====== */
-.login-container form {
-    margin-bottom: 15px
-}
 
 /* ====== ボタン共通 ====== */
-.button-area {
+.button-area1, .button-area2 {
     text-align: center; /* 子のaタグを中央寄せ */
 }
 
-.button-area a, .button-area button{
+.button-area1 a, .button-area1 button{
     background-color: #65C1EFE8;
+    display: inline-block;
+    margin: 0 auto 30px;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px; 
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.button-area2 a, .button-area2 button{
+    background-color: #3B5570;
     display: inline-block;
     margin: 0 auto 30px;
     color: white;
@@ -67,17 +75,6 @@ a {
     border-color: #38609A;
 }
 
-/* ====== コンテナ ====== */
-.login-container {
-    background-color: white;
-    width: 60%;
-    margin: 0 auto;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
 /* ====== トップページ用 ====== */
 .illustration img {
     display: block;
@@ -94,6 +91,20 @@ a {
 }
 
 /* ====== ユーザー登録/ログイン画面用 ====== */
+.login-container {
+    background-color: white;
+    width: 60%;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.login-container form {
+    margin-bottom: 15px
+}
+
 .login-container form input {
     margin: 0 auto 20px;
     width: 100%;
@@ -103,4 +114,26 @@ a {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+}
+
+/* ====== 旅行一覧画面用 ====== */
+.travel_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 20px;
+  padding: 30px;
+}
+
+.travel_card {
+  background: #65C1EF;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  padding: 24px;
+  text-align: center;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  cursor: pointer;
+}
+
+.travel_card h3, .travel_card p {
+    color: white;
 }
