update: ボタンのclass名修正

--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -12,7 +12,7 @@
     プライバシーポリシーに同意したことになります。
 </p>
 
-<div class="button-area">
+<div class="button-area1">
     <a href="{{ url_for('auth.login')}}">新規登録/ログインして使う</a>
     <p>
         <a href="{{ url_for('main.travels_list') }}">ゲストで試す</a>
