--- a/app/templates/travels_list.html
+++ b/app/templates/travels_list.html
@@ -3,21 +3,24 @@
 {% block title %}旅行一覧{% endblock %}
 
 {% block content %}
-<div class="travel_list">
+<div class="travel_container">
     <div class="travel_card">
         <h3>北海道旅行</h3>
+        <div class="travel_image"
+            style="background-image: url(\'{{ url_for('static', filename='images/sample.jpg') }}\');">
+        </div>
         <p>2025年10月16日〜2025年10月20日</p>
-        <a href="{{ url_for('main.items') }}" class="btn">持ち物を見る</a>
+        <a href="{{ url_for('main.items') }}" class="btn"></a>
     </div>
 
     <div class="travel_card">
         <h3>沖縄旅行</h3>
         <p>2025年11月16日〜2025年11月20日</p>
-        <a href="{{ url_for('main.items') }}" class="btn">持ち物を見る</a>
+        <a href="{{ url_for('main.items') }}" class="btn"></a>
     </div>    
 </div>
 
-<div class="add_new">
+<div class="button-area2">
     <a href="{{ url_for('main.new_travel') }}" class="btn_create">新しい旅行を登録する</a>
 </div>
 {% endblock %}
