update: ボタンのclass名修正

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -11,7 +11,7 @@
     <form id="login-form" method="post" action="{{ url_for('auth.login')}}">
         <input type="email" placeholder="Email" id="login-email" name="email" required>
         <input type="password" placeholder="Password" id="login-password" name="password" required>
-        <div class="button-area">
+        <div class="button-area1">
             <button type="submit">ログイン</button>
         </div>
     </form>
@@ -20,7 +20,7 @@
         <input type="text" placeholder="Username" name="username" required>
         <input type="email" placeholder="Email" id="register-email" name="email" required>
         <input type="password" placeholder="Password" id="registerpassword" name="password" required>
-        <div class="button-area">
+        <div class="button-area1">
             <button type="submit">新規登録</button>
         </div>
     </form>
