--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -22,6 +22,10 @@ a {
     color: inherit;
 }
 
+label{
+    font-weight: bold;
+}
+
 /* ====== ボタン共通 ====== */
 .button-area1, .button-area2 {
     text-align: center; /* 子のaタグを中央寄せ */
@@ -136,4 +140,59 @@ a {
 
 .travel_card h3, .travel_card p {
     color: white;
+}
+
+/* ====== 旅行登録画面用 ====== */
+.newtravel-container {
+    background-color: white;
+    width: 60%;
+    margin: 20px auto;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.newtravel-block form{
+    display: flex;
+    gap: 20px;
+    background-color: white;
+    width: 60%;
+    margin: 20px auto;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.newtravel-block label {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.newtravel-container form {
+    margin-bottom: 15px
+}
+
+.newtravel-container form input {
+    margin: 0 auto 20px;
+    width: 100%;
+    height: 45px;
+    padding: 8px 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.newtravel-block form input {
+    margin: 0 auto 20px;
+    width: 60%;
+    height: 45px;
+    padding: 8px 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;   
 }
