--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,16 @@
             <h1><a href="{{ url_for('main.top')}}">Pack Comp</a></h1>
         </header>
 
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul class="flash-messages">
+                {% for msg in messages %}
+                <li>{{ msg }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        {% endwith %}
+
         <main>
             {% block content %}{% endblock %}
         </main>
