--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -15,7 +15,7 @@
 <div class="button-area1">
     <a href="{{ url_for('auth.login')}}">新規登録/ログインして使う</a>
     <p>
-        <a href="{{ url_for('main.travels_list') }}">ゲストで試す</a>
+        <a href="{{ url_for('auth.guest_login') }}">ゲストで試す</a>
     </p>
 </div>
 
