--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -165,9 +165,11 @@ label{
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
+    margin-bottom: 15px
+
 }
 
-.newtravel-block form {
+.newtravel-block {
     display: flex;
     gap: 20px;
     background-color: white;
@@ -185,11 +187,7 @@ label{
     gap: 5px;
 }
 
-.newtravel-container form {
-    margin-bottom: 15px
-}
-
-.newtravel-container form input {
+.newtravel-container input {
     margin: 0 auto 20px;
     width: 100%;
     height: 45px;
@@ -200,7 +198,7 @@ label{
     box-sizing: border-box;
 }
 
-.newtravel-block form input {
+.newtravel-block input {
     margin: 0 auto 20px;
     width: 60%;
     height: 45px;
