update: 旅行一覧画面ルールセット修正

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -152,7 +152,7 @@ label{
   cursor: pointer;
 }
 
-.travel_card h3, .travel_card p {
+.travel_card h3, .travel_card p, .travel_card a {
     color: white;
 }
 
