--- a/app/templates/travels_list.html
+++ b/app/templates/travels_list.html
@@ -12,6 +12,9 @@
         </div>
         <p>{{ travel.departure_date }} 〜 {{ travel.return_date }}</p>
         <a href="{{ url_for('main.items', travel_id=travel.id) }}" class="btn">持ち物リストを見る</a>
+        <form action="{{url_for('main.delete_travel', travel_id=travel.id)}}" method="POST" >
+            <button type="submit" onclick="return confirm('本当に削除しますか？')">削除</button>
+        </form>
     </div>
     {% endfor %}
 </div>
