add: 出発日からの季節判定による持ち物抽出フィルター追加

--- a/app/templates/items_list.html
+++ b/app/templates/items_list.html
@@ -3,7 +3,7 @@
 {% block title %}持ち物リスト{% endblock %}
 
 {% block content %}
-<h2>{{ title }}（{{ destination }}）の持ち物リスト</h2>
+<h2>{{ travel.title }}（{{ travel.destination }}）の持ち物リスト</h2>
 <ul>
     {% for item in items %}
         <li>{{ item.name }} * {{ item.quantity }}</li>
