--- a/app/templates/new_travel.html
+++ b/app/templates/new_travel.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="button-area2">
-        <button type="submit">持ち物リスト生成</button>
+        <button type="submit">目的選択へ</button>
     </div>
 </form>
 
