--- a/app/templates/purpose_select.html
+++ b/app/templates/purpose_select.html
@@ -70,6 +70,6 @@
     <label><input type="radio" name="purpose" value="spiritual"> 占い・パワースポット巡り</label><br>
     <label><input type="radio" name="purpose" value="nothing"> 特に目的なし・気ままな旅</label><br>
 
-    <button type="submit">次へ</button>
+    <button type="submit">持ち物リスト生成</button>
 </form>
 {% endblock %}
