add: cutom_itemルーティングへのリンク追加

--- a/app/templates/items_list.html
+++ b/app/templates/items_list.html
@@ -10,4 +10,5 @@
     {% endfor %}
 </ul>
 <a href="{{ url_for('main.new_travel') }}">戻る</a>
+<a href="{{ url_for('main.custom_item') }}">アイテムを追加</a>
 {% endblock %}
