update: メモlabelのtype変更(date→text)

--- a/app/templates/custom_items_form.html
+++ b/app/templates/custom_items_form.html
@@ -14,7 +14,7 @@
         </select>
     </label><br>
     <label>画像 <br><input type="file" name="image" accept="image/*"></label><br>
-    <label>メモ <br><input type="date" name="note"></label><br>
+    <label>メモ <br><input type="text" name="note"></label><br>
 </form>
 
 <div class="button-area2">
