--- a/app/templates/custom_items_list.html
+++ b/app/templates/custom_items_list.html
@@ -16,5 +16,5 @@
 </ul>
 
 <br>
-<a href="{{ url_for('main.custom_item_new') }}">新規追加</a>
+<a href="{{ url_for('main.new_custom_item') }}">新規追加</a>
 {% endblock %}
