fix: item-rowの対象itemが全itemになるようdivタグ位置変更&全体をformタグに格納(リクエスト先はupdate_quantitiesルート)

--- a/app/templates/items_list.html
+++ b/app/templates/items_list.html
@@ -4,20 +4,27 @@
 
 {% block content %}
 <h2>{{ travel.title }}（{{ travel.destination }}）の持ち物リスト</h2>
-<ul>
-    {% for category, items in items_category.items() %}
-        <h3>{{ category }}</h3>
-        <div class="item-row">
-            {% for ti in items %}
-                    {{ ti.name }}
-                    <div class="down">-</div>
-                    <input type="number" class="qty" value="{{ ti.quantity }}" min="1">
-                    <div class="up">+</div>
-            {% endfor %}
-        </div>
-    {% endfor %}
-</ul>
-<button type="submit">数量を更新</button>
+
+<form method="POST" action="{{ url_for('main.update_quantities', travel_id=travel.id) }}">
+
+    <ul>
+        {% for category, items in items_category.items() %}
+            <h3>{{ category }}</h3>
+                {% for ti in items %}
+                <div class="item-row">
+                        {{ ti.name }}
+                        <div class="down">-</div>
+                        <input type="number" class="qty" value="{{ ti.quantity }}" name="qty_{{ ti.id }}" min="1" required>
+                        <div class="up">+</div>
+                </div>
+                {% endfor %}
+        {% endfor %}
+    </ul>
+
+    <button type="submit">数量を更新</button>
+
+</form>
+
 <a href="{{ url_for('main.travels_list') }}">戻る</a>
 <a href="{{ url_for('main.custom_items_list', travel_id=travel.id) }}">アイテムを追加</a>
 
