add: ログアウト用のaタグ追加

--- a/app/templates/travels_list.html
+++ b/app/templates/travels_list.html
@@ -22,4 +22,7 @@
 <div class="button-area2">
     <a href="{{ url_for('main.new_travel') }}" class="btn_create">新しい旅行を登録する</a>
 </div>
+
+<a href="{{ url_for('auth.logout') }}" class="logout-btn">ログアウト</a>
+
 {% endblock %}
