--- a/app/templates/mysets_list.html
+++ b/app/templates/mysets_list.html
@@ -11,7 +11,13 @@
     {% for ms in mysets %}
         <div class="myset-block" data-myset-id="{{ ms.id }}">
             <h3 class="myset-title">{{ ms.name }}</h3>
+
             <div class="myset-items hidden"></div>
+            
+            <form method="POST" action="{{ url_for('main.add_myset_to_travel', my_set_id=ms.id, travel_id=travel.id) }}" class="apply-form">
+                <button type="submit">このマイセットを追加</button>
+            </form>
+
             <div class="delete-btn">削除</div>
         </div>
     {% else %}
