add: items_listへのリンクを追加

--- a/app/templates/custom_items_list.html
+++ b/app/templates/custom_items_list.html
@@ -20,6 +20,8 @@
 
 <br>
 <a href="{{ url_for('main.new_custom_item', travel_id=travel.id) }}">新規追加</a>
+<a href="{{ url_for('main.items', travel_id=travel.id) }}">← 持ち物リストへ戻る</a>
+
 
 <script>
     document.querySelectorAll(".custom-item-row").forEach(row => {
